# streamtex-docs

./: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  render.yaml  run-manuals.sh
.claude/: CLAUDE.md.j2
.claude/commands/: stx-guide.md
.claude/commands/coherence/: audit.md
.claude/designer/skills/: streamtex-quick-reference.md
.claude/developer/skills/: coherence-checks.md
.claude/references/: coding_standards.md  streamtex_cheatsheet_en.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  render-deploy.yml
documentation/maintenance/: multi-theme-implementation.md
manuals/: streamtex ・ Web Service ・ Render Dashboard.webloc
manuals/shared-blocks/: README.md
manuals/shared-blocks/blocks/: __init__.py  bck_best_practices.py  bck_style_basics.py  (+3 more)
manuals/stx_manual_advanced/: book.py  setup.py
manuals/stx_manual_ai/: book.py  setup.py
manuals/stx_manual_deploy/: book.py  setup.py
manuals/stx_manual_developer/: book.py
manuals/stx_manual_intro/: book.py  setup.py
manuals/stx_manuals_collection/: book.py  collection.toml  setup.py
manuals/sx_manual_advanced/: book.py  setup.py
manuals/sx_manual_intro/: setup.py
manuals/sx_manuals_collection/: book.py  collection.toml  setup.py
manuals/sx_manuals_shared-blocks/: README.md
references/: coding_standards.md  streamtex_cheatsheet_en.md  streamtex_cheatsheet_fr.md
scripts/: claude-sync.sh
templates/template_collection/: .gitignore  book.py  collection.toml  setup.py
templates/template_project/: book.py  pyproject.toml  setup.py
templates/template_project/.streamlit/: config.toml
templates/template_project/blocks/: __init__.py  base.py  bck_01_welcome.py  bck_02_text_and_styles.py  bck_03_containers_and_spacing.py  bck_04_grids.py  bck_05_lists.py  bck_06_images.py  bck_07_code_blocks.py  bck_08_overlays_and_includes.py  bck_09_interactivity.py  helpers.py  separator.py  show_off.py  sub_block.py
templates/template_project/custom/: styles.py  themes.py
(+504 files in other folders)
