[project]
name = "template_project"
version = "0.1.0"
description = "StreamTeX project template"
requires-python = ">=3.11"
dependencies = [
    "streamtex>=0.3.0",
    "streamlit>=1.54.0",
]

[dependency-groups]
dev = ["pytest>=7.0", "ruff>=0.4.0", "pre-commit>=3.0"]

[tool.uv]
default-groups = ["dev"]

[tool.ruff.lint]
ignore = ["F403", "F405", "E701", "E741"]

[tool.pyright]
extraPaths = ["../../streamtex"]
